tests/ui/error-codes/E0586.stderr
error[E0586]: inclusive range with no end
  --> $DIR/E0586.rs:3:19
   |
LL |     let x = &tmp[1..=];
   |                   ^^^
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)
help: use `..` instead
   |
LL -     let x = &tmp[1..=];
LL +     let x = &tmp[1..];
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0586`.
